# python-senziio-ha

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
senziio/: __init__.py  exceptions.py  senziio.py
tests/: test_senziio.py
