[build-system]
requires = ["setuptools>=69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "senziio"
version = "0.0.1"
description = "Support libraries for the Senziio Theia device integration with Home Assistant."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
authors = [
  { name="Federico Zuccolo", email="federico.zuccolo@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/senziio-admin/python-senziio-ha"
Issues = "https://github.com/senziio-admin/python-senziio-ha/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "flake8"]
